tests/NormalTests/paczka1/small_fuzzy/75351181.err
Error in line 6: wf7rzTIL S46 56,7
Error in line 14: IGPlna S;6 2;,8
